# yt2mp3

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  yt2mp3.py
docs/: AUDIO_QUALITY.md  PYTHON_GUIDE.md  SUMMARY.md  TESTING.md
src/yt2mp3/: __init__.py  cli.py  config.py  downloader.py
tests/: test_cli.py  test_config.py  test_downloader.py
